--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "svelte": "^4.2.18",
-    "vite": "^5.3.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.47.10"
   }
 }
